sfdx-source/force-app/main/default/objects/SBQQ__DiscountTier__c/fields/Display_on_Ironclad__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Ironclad__c</fullName>
    <description>This formula field is created as part of CLM to indicate that Discount Tier needs to be displayed on Ironclad only when the currency matches with the Quote currency</description>
    <formula>IF ( TEXT(SBQQ__Schedule__r.SBQQ__Quote__r.CurrencyIsoCode) = TEXT(CurrencyIsoCode),&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Display on Ironclad</label>
    <type>Text</type>
</CustomField>